@@ -4,8 +4,8 @@ else
 shareddir = $(datadir)/gupnp-tools
 endif
 
-AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGLADE_CFLAGS) -I$(top_srcdir) \
-	    -DDATA_DIR='"$(shareddir)"' -I../common
+AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGUPNP_AV_CFLAGS) $(LIBGLADE_CFLAGS) \
+	    -I$(top_srcdir) -DDATA_DIR='"$(shareddir)"' -I../common
 
 bin_PROGRAMS = gupnp-av-cp
 
@@ -18,7 +18,9 @@ gupnp_av_cp_SOURCES = main.c \
 		      playlist-treeview.h \
 		      renderer-combo.h
 
-gupnp_av_cp_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS) \
+gupnp_av_cp_LDADD = $(LIBGLADE_LIBS) \
+		    $(LIBGUPNP_LIBS) \
+		    $(LIBGUPNP_AV_LIBS) \
 		    ../common/libicons.a
 gupnp_av_cp_LDFLAGS = -export-dynamic
 
